Add field expiry to DayType

--- a/src/main/webapp/i18n/en/dayType.json
+++ b/src/main/webapp/i18n/en/dayType.json
@@ -18,6 +18,7 @@
             "type": "Type",
             "score": "Score",
             "description": "Description",
+            "expiry": "Expiry",
             "created": "Created",
             "updated": "Updated",
             "board": "Board"
