Rename auditing fields. Still not correct apis!

--- a/src/main/webapp/i18n/en/user-management.json
+++ b/src/main/webapp/i18n/en/user-management.json
@@ -23,8 +23,8 @@
         "profiles": "Profiles",
         "langKey": "Language",
         "createdBy": "Created by",
-        "createdDate": "Created date",
-        "lastModifiedBy": "Modified by",
-        "lastModifiedDate": "Modified date"
+        "created": "Created date",
+        "updatedBy": "Modified by",
+        "updated": "Modified date"
     }
 }
