fix bug with duplicate created/updated

--- a/src/main/webapp/i18n/en/dayType.json
+++ b/src/main/webapp/i18n/en/dayType.json
@@ -19,8 +19,8 @@
             "score": "Score",
             "description": "Description",
             "expiry": "Expiry",
-            "created": "Created",
-            "updated": "Updated",
+            "createdDate": "Created",
+            "updatedDate": "Updated",
             "board": "Board"
         }
     }
