--- a/src/main/webapp/i18n/en/party.json
+++ b/src/main/webapp/i18n/en/party.json
@@ -17,8 +17,8 @@
             },
             "name": "Name",
             "description": "Description",
-            "created": "Created",
-            "updated": "Updated",
+            "createdDate": "Created",
+            "updatedDate": "Updated",
             "subject": "Subject"
         }
     }
