--- a/src/main/webapp/i18n/en/board.json
+++ b/src/main/webapp/i18n/en/board.json
@@ -17,8 +17,8 @@
             },
             "name": "Name",
             "description": "Description",
-            "created": "Created",
-            "updated": "Updated",
+            "createdDate": "Created",
+            "updatedDate": "Updated",
             "party": "Party",
             "subject": "Subject",
             "student": "Student",
