--- a/src/main/webapp/i18n/ua/party.json
+++ b/src/main/webapp/i18n/ua/party.json
@@ -1,6 +1,6 @@
 {
     "smartjournalApp": {
-        "party": {
+        "group": {
             "home": {
                 "title": "Parties",
                 "createLabel": "Створити новий Party",
