--- a/src/main/webapp/i18n/ua/board.json
+++ b/src/main/webapp/i18n/ua/board.json
@@ -19,7 +19,7 @@
             "description": "Description",
             "createdDate": "Created",
             "updatedDate": "Updated",
-            "party": "Party",
+            "group": "Party",
             "subject": "Subject",
             "student": "Student",
             "dayType": "Day Type"
