--- a/src/main/webapp/i18n/ua/global.json
+++ b/src/main/webapp/i18n/ua/global.json
@@ -7,7 +7,7 @@
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
             "entities": {
                 "main": "Сутності",
-                "party": "Party",
+                "group": "Party",
                 "subject": "Subject",
                 "student": "Student",
                 "day": "Day",
