Fix error alert for 403

--- a/src/main/webapp/i18n/ua/global.json
+++ b/src/main/webapp/i18n/ua/global.json
@@ -133,7 +133,8 @@
         "userexists": "Ім'я користувача вже використовується!",
         "emailexists": "Електронна пошта вже використовується!",
         "idexists": "Новий {{entityName}} не може мати даний ID",
-        "idnull": "Invalid ID"
+        "idnull": "Invalid ID",
+        "accessDenied": "Ви не маєте дозволу на перегляд цієї сторінки"
     },
     "footer": "Це ваш футер"
 }
