Field 'title' for board, check for existence in POST /boards

--- a/src/main/webapp/i18n/en/board.json
+++ b/src/main/webapp/i18n/en/board.json
@@ -15,6 +15,10 @@
             "detail": {
                 "title": "Board"
             },
+            "validation": {
+                "boardExists": "Board for such group and subject already exists!"
+            },
+            "title": "Title",
             "name": "Name",
             "description": "Description",
             "createdDate": "Created",
