--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -7,7 +7,7 @@
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
             "entities": {
                 "main": "Entities",
-                "group": "Party",
+                "group": "Group",
                 "subject": "Subject",
                 "student": "Student",
                 "day": "Day",
@@ -136,6 +136,7 @@
         "userexists": "Login name already used!",
         "emailexists": "Email is already in use!",
         "idexists": "A new {{ entityName }} cannot already have an ID",
+        "nameexists": "{{ entityName }} with this name is already exists",
         "idnull": "Invalid ID",
         "accessDenied": "You have no permission to view this page"
     },
