--- a/src/main/webapp/i18n/ua/global.json
+++ b/src/main/webapp/i18n/ua/global.json
@@ -7,12 +7,12 @@
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
             "entities": {
                 "main": "Сутності",
-                "group": "Party",
-                "subject": "Subject",
-                "student": "Student",
-                "day": "Day",
-                "dayType": "Day Type",
-                "board": "Board",
+                "group": "Група",
+                "subject": "Предмет",
+                "student": "Студент",
+                "day": "День",
+                "dayType": "Тип Дня",
+                "board": "Дошка",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
@@ -133,6 +133,7 @@
         "userexists": "Ім'я користувача вже використовується!",
         "emailexists": "Електронна пошта вже використовується!",
         "idexists": "Новий {{entityName}} не може мати даний ID",
+        "nameexists": "{{ entityName }} з таким ім'ям вже існує!",
         "idnull": "Invalid ID",
         "accessDenied": "Ви не маєте дозволу на перегляд цієї сторінки"
     },
