Add creating board with from, to, days params

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -19,3 +19,6 @@ email.reset.title=smartjournal password reset
 email.reset.greeting=Dear {0}
 email.reset.text1=For your smartjournal account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
+
+# Board
+board.create.dayType.description="Normal pair(lesson), visiting is estimated"
