--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -18,4 +18,7 @@ email.creation.text1=Your smartjournal account has been created, please click on
 email.reset.title=smartjournal password reset
 email.reset.greeting=Dear {0}
 email.reset.text1=For your smartjournal account a password reset was requested, please click on the URL below to reset it:
-email.reset.text2=Regards,
+email.reset.text2=
+
+# Board
+board.create.dayType.description="Normal pair(lesson), visiting is estimated"
