--- a/src/main/resources/i18n/messages_ua.properties
+++ b/src/main/resources/i18n/messages_ua.properties
@@ -19,3 +19,6 @@ email.reset.title=smartjournal Скидання паролю
 email.reset.greeting=Шановний {0}
 email.reset.text1=Для вашого smartjournal облікового запису був створений запит на скидання пароля. Будь ласка, натисніть на посилання нижче для його активації:
 email.reset.text2=З повагою,
+
+# Board
+board.create.dayType.description="Звичайна пара(урок), відвідування оцінюється"
