--- a/src/main/webapp/i18n/en/board.json
+++ b/src/main/webapp/i18n/en/board.json
@@ -26,7 +26,9 @@
             "group": "Party",
             "subject": "Subject",
             "student": "Student",
-            "dayType": "Day Type"
+            "dayType": "Day Type",
+
+            "defaultDescription": "Normal pair(lesson), visiting is estimated"
         }
     }
 }
