--- a/src/main/webapp/i18n/ua/board.json
+++ b/src/main/webapp/i18n/ua/board.json
@@ -26,7 +26,9 @@
             "group": "Група",
             "subject": "Предмет",
             "student": "Студент",
-            "dayType": "Тип дня"
+            "dayType": "Тип дня",
+
+            "defaultDescription": "Звичайна пара(урок), відвідування оцінюється"
         }
     }
 }
