--- a/src/main/webapp/i18n/ua/global.json
+++ b/src/main/webapp/i18n/ua/global.json
@@ -135,7 +135,7 @@
         "idexists": "Новий {{entityName}} не може мати даний ID",
         "nameexists": "{{ entityName }} з таким ім'ям вже існує!",
         "idnull": "Invalid ID",
-        "accessDenied": "Ви не маєте дозволу на перегляд цієї сторінки"
+        "accessDenied": "Ви не маєте дозволу на перегляд цієї сторінки або виконання даної операції"
     },
     "footer": "Це ваш футер"
 }
