--- a/src/main/webapp/i18n/ua/home.json
+++ b/src/main/webapp/i18n/ua/home.json
@@ -1,11 +1,11 @@
 {
     "home": {
-        "title": "Ласкаво просимо, Java hipster!",
+        "title": "Ласкаво просимо до Розумного Журналу!",
         "subtitle": "Це ваша домашня сторінка",
         "logged": {
             "message": "Ви ввійшли як користувач \"{{username}}\"."
         },
-        "question": "Якщо у вас виникли питання по JHipster:",
+        "question": "Якщо у вас виникли запитання, ви можете зв'язатися з розробниками:",
         "link": {
             "homepage": "Домашня сторінка JHipster",
             "stackoverflow": "JHipster на Stack Overflow",
@@ -13,7 +13,7 @@
             "chat": "Публічна чат кімната JHipster ",
             "follow": "Користувач @java_hipster в Twitter"
         },
-        "like": "Якщо вам подобається JHipster, не забудьте дати нам зірку на",
+        "like": "Якщо вам подобається Розумний Журнал, не забудьте дати нам зірку на",
         "github": "GitHub"
     }
 }
