board creation base works

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -21,4 +21,5 @@ email.reset.text1=For your smartjournal account a password reset was requested, 
 email.reset.text2=Regards,
 
 # Board
+board.create.dayType.name="Normal pair"
 board.create.dayType.description="Normal pair(lesson), visiting is estimated"
