--- a/src/main/resources/i18n/messages_ua.properties
+++ b/src/main/resources/i18n/messages_ua.properties
@@ -21,4 +21,5 @@ email.reset.text1=Для вашого smartjournal облікового запи
 email.reset.text2=З повагою,
 
 # Board
+board.create.dayType.name="Звичайна пара"
 board.create.dayType.description="Звичайна пара(урок), відвідування оцінюється"
