Fix board generation

--- a/src/main/webapp/i18n/ua/group.json
+++ b/src/main/webapp/i18n/ua/group.json
@@ -2,7 +2,7 @@
     "smartjournalApp": {
         "group": {
             "home": {
-                "title": "Groups",
+                "title": "Групи",
                 "createLabel": "Створити нову Групу",
                 "createOrEditLabel": "Створити чи редагувати Групу"
             },
