--- a/src/main/webapp/i18n/ua/subject.json
+++ b/src/main/webapp/i18n/ua/subject.json
@@ -2,7 +2,7 @@
     "smartjournalApp": {
         "subject": {
             "home": {
-                "title": "Subjects",
+                "title": "Предмети",
                 "createLabel": "Створити новий Subject",
                 "createOrEditLabel": "Створити чи редагувати Subject"
             },
